[tool.poetry]
description = ""
authors = []
readme = "README.md"
packages = [{ include = "python3" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
