[project]
name = "daily_coding_problem"
version = "0.0.1"
description = ""
authors = []
requires-python = "~=3.11"
readme = "README.md"
dependencies = ["pytest>=8.3.1,<9", "numpy>=2.1.2,<3", "hypothesis>=6.116.0,<7"]

[dependency-groups]
dev = ["black>=24.4.2,<25"]

[tool.uv]
package = false

[tool.hatch.build.targets.sdist]
include = ["python3"]

[tool.hatch.build.targets.wheel]
include = ["python3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
reportMissingTypeStubs = false
reportAny = false
